# bokit

./: .gitignore  CMakeLists.txt  README.md
bokit/include/bokit/byte_tools/: transcoding.hpp
bokit/include/bokit/random/: entry.hpp
bokit/include/bokit/types/: monotonic_counter.hpp  shared_obj.hpp  view.hpp
bokit/random/: generator.hpp  string.hpp
bokit/src/random/: string.cpp
cmake/: LibraryConfig.cmake
examples/basic/: CMakeLists.txt  main.cpp
include/bokit/byte_tools/: transcoding.hpp
include/bokit/types/: lifetime.hpp  shared_obj.hpp  view.hpp
